2017-06-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for config directives
      'ssl-[client|server]-cipher-list'.
    * gwlib/cfg.def: add above config directives to 'group = core'.
    * gwlib/conn.[ch]: ensure openssl engine cleanup is performed more cleanly,
      this avoids various static memory leaks reported by valgrind, and add
      encryption suite and cipher select/de-select configuration.
    This patchset allows configuring the SSL/TLS client/server side connection
    by defining which suites and ciphers should be used. The corresponding
    cipher stings are defined in the openssl documentation part.
    
2017-04-11  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: provides the missing MO part for the generic type
      from the patchset dated 2017-03-14, allowing to send UTF-8 data, which
      can then be forwarded as UCS-2 towards the smsbox connection. We transcode
      ONLY if an alt-charset is set and a coding value has been provided.

2017-04-10  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: fix transcoding by using UTF-16BE as UCS-2 encoding 
      indication.

2017-03-14  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: remove 'wapme' reference for HTTP SMSC type.
    * gw/smsc/smsc_http.c: re-considering an older issue, when having UCS2 
      payload from the smsbox connection side. All major HTTP API will NEED
      a unique encoding that is injected, and we will use 'alt-charset = UTF-8'
      to allow setting a config diretive to convert ANY encoding to UTF-8
      towards the upstream, which reflects an unique input encoding, otherwise
      there is no way to distinguish this. This allows keeping the currentlogic 
      if no 'alt-charset' is set. 
    * gw/smsc/http/wapme.c: removed the 'wapme' type as it is dead for quite 
      some time now.
    This patchset ensures that we have a construct (via setting a config