@@ -1,3 +1,7 @@
+2017-07-19 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smsc_smpp.c: Fixed sending of long messages.
+      This fixes #769.
+
 2017-06-16  Stipe Tolj  <stolj at kannel.org>
     * doc/userguide/userguide.xml: add documentation for config directives
       'ssl-[client|server]-cipher-list'.
